--- a/module_templates/tint_base.html
+++ b/module_templates/tint_base.html
@@ -4,10 +4,14 @@
 
 {% block module_js %} 
     <script src="{{ static_assets('js/banjax-data.js') }}"></script>
+    <script src="{{ module_assets('js/jquery-ui.min.js')}}"></script>
     <script src="{{ module_assets('js/banjax-tint.js') }}"></script>
+    
 {% end %} 
 
 {% block module_css %} 
+		<link rel="stylesheet" type="text/css" href="{{ module_assets('css/jquery-ui.min.css') }}">
+		<link rel="stylesheet" type="text/css" href="{{ module_assets('css/jquery-ui.structure.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ module_assets('css/style.css') }}">
 {% end %}
 
