added handling of header data

--- a/module_templates/tint_base.html
+++ b/module_templates/tint_base.html
@@ -3,6 +3,7 @@
 {% block title %} TEST FORM {% end %}
 
 {% block module_js %} 
+		<script src="//cdn.jsdelivr.net/jquery.scrollto/2.1.2/jquery.scrollTo.min.js"></script>
     <script src="{{ static_assets('js/banjax-data.js') }}"></script>
     <script src="{{ module_assets('js/jquery-ui.min.js')}}"></script>
     <script src="{{ module_assets('js/banjax-tint.js') }}"></script>
