added submit button

--- a/module_templates/tint_form.html
+++ b/module_templates/tint_form.html
@@ -3,6 +3,11 @@
 {% block content %}
 
 	<div class="large-7 columns">
+			<div class="row">
+				<div class="large-2 columns">
+					<button class="button large submit_data">Save</button>
+				</div>
+			</div>
 	    <div class="row">
 	    	
 	    
